--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,23 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 body {
-    font: 30px "Century Gothic", Futura, sans-serif;
-    margin: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100vw;
+    height: 100vh;
+    font: 20px "Century Gothic", Futura, sans-serif;
+    color: white;
+    background:linear-gradient(rgb(49, 33, 33), rgb(19, 17, 17));
   }
-  
+  #root {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
   ol, ul {
     padding-left: 30px;
   }
@@ -18,22 +33,27 @@ body {
   }
   
   .game-board-inner {
+    width: 298px;
+    height: 297px;
     border: 3px solid #000;
+    border-radius: 10px;
+    box-shadow: 5px 5px 3px 0 rgba(0,0,0,.5);
   }
-  
+
   .square {
-    background: rgb(25, 141, 54);
-    border: 5px solid rgb(2, 2, 2);
     float: left;
-    font-size: 80px;
-    font-weight: bold;
-    line-height: 34px;
+    width: 100px;
     height: 100px;
     margin-right: -1px;
     margin-top: -1px;
     padding: 0;
+    font-size: 80px;
+    font-weight: bold;
+    line-height: 34px;
     text-align: center;
-    width: 100px;
+    background: radial-gradient(rgb(34, 151, 30), rgb(28, 99, 26));
+    border: 5px solid rgb(0, 0, 0);
+    box-shadow: inset 3px 3px 3px 0 rgba(0,0,0,.5);
   }
   
   .square:focus {
@@ -47,8 +67,6 @@ body {
   .game {
     display: flex;
     flex-direction: row;
-    margin-left: 40%;
-    margin-top: 20%;
   }
   
   .game-info {
